2006-10-04  Fred Fish  <fnf@specifix.com>

	* vec.c: Include defs.h first.  This pulls in config.h which can
	affect other includes.

2006-10-04  Joel Brobecker  <brobecker@adacore.com>

	* somread.c (som_symtab_read): Avoid using alloca for potentially
	large buffers.

2006-10-04  Daniel Jacobowitz  <dan@codesourcery.com>

	* arch-utils.h (gdbarch_info_fill): Remove duplicate prototype.

2006-10-03  Daniel Jacobowitz  <dan@codesourcery.com>

	* memory-map.c (XML_STATUS_OK, XML_STATUS_ERROR): Provide default
	definitions.
	* xml-support.c (XML_STATUS_OK, XML_STATUS_ERROR): Likewise.

2006-09-22  Daniel Jacobowitz  <dan@codesourcery.com>

	* remote.c (remote_write_bytes_aux): Doc fix.

2006-09-21  Vladimir Prus  <vladimir@codesourcery.com>
	    Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (SFILES): Add target-memory.c.
	(COMMON_OBS): Add target-memory.o.
	* memattr.c (lookup_mem_region): Adjust handling for
	the top of memory.  Improve comments.
	* remote.c (packet_check_result): New function, split out
	from packet_ok.  Recognize "E." as an error prefix.
	(packet_ok): Use it.
	(remote_write_bytes_aux): New function, renamed from
	remote_write_bytes.  Take packet header, packet format,
	and length flag as arguments.
	(remote_write_bytes): Rewrite to use remote_write_bytes_aux.
	(remote_send_printf, restore_remote_timeout)
	(remote_flash_timeout, remote_flash_erase, remote_flash_write)
	(remote_flash_done): New.
	(remote_xfer_partial): Handle flash writes.
	(init_remote_ops, init_remote_async_ops): Set to_flash_erase
	and to_flash_done.
	* symfile.c (struct load_section_data): Include a pointer to
	the cumulative stats and a request queue.  Move most members
	to other types.
	(struct load_progress_data, struct load_progress_section_data): New
	types.
	(load_progress): Handle a NULL baton and zero bytes.  Update for
	type changes.
	(load_section_callback): Create memory write requests instead of
	writing to memory.  Don't print the progress message here.